# bindmate

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  fake_sequence_blurred_0_10_250_100_100.fasta  fake_sequence_less_blurred_0_10_250_100_100.fasta  noblurr_balanced_human_genome.fasta  noblurr_human_genome_sample.fasta  noblurr_human_genome_sample_bigger.fasta  pyproject.toml  requirements.txt
kmer_pairing_result_test/: probas_0.npy  probas_1.npy  unique_kmers.txt
src/bindmate/: __init__.py  functions.py  input_loading.py  install_dnashape.py  kmer_to_kmer_matchscores.py  main.py  predefined_functions.py  seq_to_seq_matchscores.py  shape_only_simple_run_script.py  simple_run_script.py
src/bindmate/additional_prep/: metrics_prep_for_quick_reading.ipynb
src/bindmate/backgrounds/: backgrounds.py
src/bindmate/em_algorithm/: optimization.py
src/bindmate/kmer/: H12CORE_pfms.txt  kmer_comparison_functions.py  make_kmers.py
src/bindmate/kmer/sources_for_motif_based_scoring/hocomoco/: datasets.csv
src/bindmate/kmer/sources_for_motif_based_scoring/probound/: 10109.json  10589.json  10592.json  10594.json  10629.json  10637.json  10644.json  10648.json  10649.json  10653.json  10654.json  10662.json  10676.json  10752.json  10753.json  10759.json  10780.json  11166.json  11168.json  11179.json  11184.json  11190.json  (+852 more)
src/bindmate/pairing_graph/: bipartite_graph_toolbox.py
src/kmer_metric_evaluation/: dna_shape.py  kl_divergence_first_look.ipynb  kmer_metric_analysis.py  kmer_metric_eval.ipynb  sandbox.ipynb  weighted_em_algorithm_sandbox.ipynb
