[project]
name = "bindmate"
version = "0.0.1"
authors = [
  { name="Katerina Faltejskova", email="katerina.faltejskova@uochb.cas.cz" },
]
description = "Clustering analysis based on k-mer pairing with an arbitrary k-mer similarity method"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Caeph/bindmate"
Issues = "https://github.com/Caeph/bindmate/issues"